# ChangeLog for dev-ruby/ruby-progressbar
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-progressbar/ChangeLog,v 1.16 2008/11/15 18:45:27 flameeyes Exp $

  15 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  ruby-progressbar-0.8.ebuild:
  Execute test.rb in the src_test phase, but don't install it.

  05 Dec 2006; Jeroen Roovers <jer@gentoo.org> ruby-progressbar-0.8.ebuild:
  Stable for HPPA (bug #156872).

  04 Dec 2006; Jason Wever <weeve@gentoo.org> ruby-progressbar-0.8.ebuild:
  Stable on SPARC wrt bug #156872 .

  31 Oct 2006; Jason Wever <weeve@gentoo.org> ruby-progressbar-0.8.ebuild:
  Added ~sparc keyword wrt bug #152265.

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org>
  ruby-progressbar-0.8.ebuild:
  Mark 0.8 stable on ia64

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  ruby-progressbar-0.8.ebuild:
  Mark 0.8 ~ia64

  24 Apr 2005; Simon Stelling <blubb@gentoo.org>
  ruby-progressbar-0.8.ebuild:
  stable on amd64

  27 Jan 2005; Yuta SATOH <nigoro@gentoo.org> ruby-progressbar-0.8.ebuild:
  Stable on ppc64

  20 Dec 2004; Yuta SATOH <nigoro@gentoo.org> ruby-progressbar-0.8.ebuild:
  added ~ppc64

  23 May 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-progressbar-0.8.ebuild:
  Stable on alpha and ppc

  25 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-progressbar-0.5.ebuild,
  ruby-progressbar-0.8.ebuild:
  Added to ~alpha. Don't assign default to S. Removed old ebuild.

  11 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-progressbar-0.5.ebuild,
  ruby-progressbar-0.8.ebuild:
  Marked 0.8 stable on x86. virtual/ruby fix

*ruby-progressbar-0.8 (22 Mar 2004)

  22 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-progressbar-0.8.ebuild:
  Version bumped. Marked previous version stable on x86.

  01 Mar 2004; David Holm <dholm@gentoo.org> ruby-progressbar-0.5.ebuild:
  Added to ~ppc.

*ruby-progressbar-0.5 (25 Dec 2003)
