@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/test-unit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/test-unit/ChangeLog,v 1.5 2009/04/14 17:53:39 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/test-unit/ChangeLog,v 1.6 2009/05/15 14:53:21 flameeyes Exp $
+
+  15 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  test-unit-2.0.2-r1.ebuild:
+  Add ~x86-fbsd keyword.
 
   14 Apr 2009; Hans de Graaff <graaff@gentoo.org> -test-unit-2.0.2.ebuild:
   Remove old version.
