@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-progressbar
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-progressbar/ChangeLog,v 1.16 2008/11/15 18:45:27 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-progressbar/ChangeLog,v 1.17 2009/05/15 14:49:46 flameeyes Exp $
+
+  15 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  ruby-progressbar-0.8.ebuild:
+  Add ~x86-fbsd keyword.
 
   15 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
   ruby-progressbar-0.8.ebuild:
